<resources>
    <string name="app_name">Hermes_app</string>
    <string name="title_home">Home</string>
    <string name="title_call">Call</string>
    <string name="title_locate">Locate</string>
    <string name="title_settings">Settings</string>
    <string name="ping_cane">Ping Cane</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="information">Information</string>
    <string name="logout">Logout</string>
    <string name="manage_account">Manage Account</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>

</resources>