<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_call"
        android:icon="@drawable/ic_baseline_call_24"
        android:title="@string/title_call" />

    <item
        android:id="@+id/navigation_ping"
        android:title=""
        android:enabled="false"/>

    <item
        android:id="@+id/navigation_locate"
        android:icon="@drawable/ic_baseline_location_on_24"
        android:title="@string/title_locate" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/title_settings" />

</menu>