<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:checkableBehavior="single">

        <item
            android:title="Main Functions of the App">
            <menu>

                <item
                    android:id="@+id/navigation_home"
                    android:icon="@drawable/ic_home_black_24dp"
                    android:title="@string/home" />

                <item
                    android:id="@+id/navigation_call"
                    android:icon="@drawable/ic_baseline_call_24"
                    android:title="@string/title_call" />

                <item
                    android:id="@+id/navigation_locate"
                    android:icon="@drawable/ic_baseline_location_on_24"
                    android:title="@string/title_locate" />

                <item
                    android:id="@+id/navigation_settings"
                    android:icon="@drawable/ic_baseline_settings_24"
                    android:title="@string/settings"/>
            </menu>
        </item>

        <item
            android:title="Account Management">
            <menu>
                <item
                    android:id="@+id/drawer_manage_account"
                    android:icon="@drawable/ic_baseline_manage_accounts_24"
                    android:title="@string/manage_account"
                    android:color="@color/black" android:state_checked="true"/>

                <item
                    android:id="@+id/drawer_logout"
                    android:icon="@drawable/ic_baseline_logout_24"
                    android:title="@string/logout"
                    android:color="@color/black" android:state_checked="true"/>
            </menu>
        </item>

    </group>

</menu>
